--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       padding-bottom: 0.5rem;
     }
     .project {
-      background: #8B5E3C;
+      background: white;
       padding: 1rem;
       margin-bottom: 1rem;
       border-radius: 8px;
