--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       border-bottom: 2px solid #D1A827;
       padding-bottom: 0.5rem;
     }
+    h3 {
+      color: #2F5D50;
+    }
     .project {
       background: white;
       padding: 1rem;
@@ -43,6 +46,7 @@
       padding: 1rem;
       background: #2F5D50;
       font-size: 0.9em;
+      color: #DFE7B7;
     }
   </style>
 </head>
@@ -56,40 +60,47 @@
   <section>
     <h2>About Me</h2>
     <p>
-      I'm a data analyst passionate about uncovering insights through data and solving real-world problems using analytics and machine learning. I build dashboards, predictive models, and automate workflows.
+      I am data analyst who just loves analytics. What I share with you today are projects that I have worked on during my free time. The goal is to demonstrate my abilities and skills in areas that I am most interested in. 
     </p>
   </section>
 
   <section>
     <h2>Projects</h2>
 
+    <!-- Dashboards -->
+    <h3>Dashboards</h3>
     <div class="project">
-      <h3>Customer Retention Dashboard</h3>
-      <p>Built an interactive Power BI dashboard to track churn risk using customer transaction and behavior data.</p>
-      <p><strong>Tools:</strong> Power BI, SQL, DAX</p>
-      <a href="https://yourlink.com/project1" target="_blank">View Project</a>
+      <h4>Montreal Crime</h4>
+      <p>Using public data from Montreal, I built a dashboard to gain insight on crime trends. </p>
+      <p><strong>Tools:</strong> Tableau</p>
+      <a href="https://public.tableau.com/app/profile/billy1723/viz/CrimesinMontreal_17044031802300/Dashboard1" target="_blank">View Project</a>
     </div>
 
+    <!-- Machine Learning -->
+    <h3>Machine Learning</h3>
     <div class="project">
-      <h3>Bitcoin Price Forecast using XGBoost</h3>
-      <p>Developed a machine learning model to predict daily Bitcoin prices using technical indicators.</p>
-      <p><strong>Tools:</strong> Python, XGBoost, yFinance, Matplotlib</p>
-      <a href="https://yourlink.com/project2" target="_blank">View Project</a>
+      <h4>Bitcoin Price Forecast using Random Forest</h4>
+      <p>Inspired by a research paper conducted by two researchers, I attempted to replicate their model using their top 6 important features.  </p>
+      <p><strong>Tools:</strong> Python, Scikit-learn</p>
+      <a href="https://github.com/BP1294/BTC-Price-Prediction" target="_blank">View Project</a>
     </div>
 
-    <!-- Add more projects here -->
-
+    <!-- Add more categories below -->
+    <!--
+    <h3>📈 Forecasting</h3>
+    <div class="project">...</div>
+    -->
   </section>
 
   <section>
     <h2>Contact</h2>
-    <p>Email: youremail@example.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/billy-p-a0679814a/" target="_blank">yourprofile</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
+    <p>Email: b.phongsavath94@gmail.com</p>
+    <p><a href="https://www.linkedin.com/in/billy-p-a0679814a/" target="_blank">LinkedIn</a></p>
+    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">BP1294</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Billy P. All rights reserved.
   </footer>
 
 </body>
