--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
       <a href="https://github.com/BP1294/BTC-Price-Prediction" target="_blank">View Project</a>
     </div>
 
+    <!-- Simulation -->
+    <h3>Simulation</h3>
+    <div class="project">
+      <h4>Stake: Dice</h4>
+      <p>Is there a way to win online casinos? After spending some time evaluating expected values through various games, I became intrigued by the game, dice.
+        Unfortunately, house will always have the upper hand but the results from the simulation took me by surprise. </p>
+      <p><strong>Tools:</strong> Python</p>
+      <a href="https://github.com/BP1294/Dice" target="_blank">View Project</a>
+    </div>
     <!-- Add more categories below -->
     <!--
     <h3>📈 Forecasting</h3>
@@ -94,8 +103,8 @@
 
   <section>
     <h2>Contact</h2>
-    <p>Email: b.phongsavath94@gmail.com</p>
     <p><a href="https://www.linkedin.com/in/billy-p-a0679814a/" target="_blank">LinkedIn</a></p>
+    <p>Email: b.phongsavath94@gmail.com</p>
     <p>GitHub: <a href="https://github.com/yourusername" target="_blank">BP1294</a></p>
   </section>
 
