--- a/index.html
+++ b/index.html
@@ -111,7 +111,23 @@
         <a href="https://github.com/BP1294/Dice" target="_blank">View Project</a>
       </div>
     </div>
+
+
+    <!-- Dashboards Category -->
+    <div class="category" onclick="toggleCategory('case')">Case/Concept ideas</div>
+    <div class="project-list" id="case">
+      <div class="project">
+        <h4>Credit Building</h4>
+        <p>Credit scores are a traditional method to assess customer risk. </p>
+        <p><strong>Tools:</strong> SQL, Relational Database, Python</p>
+        <a href="https://github.com/BP1294/Credit-Building" target="_blank">View Project</a>
+      </div>
+    </div>
+
+
+
   </section>
+
 
   <section>
     <h2>Contact</h2>
